compiler/fir/analysis-tests/testData/resolve/constructors/erroneousDelegatedConstructorCall.kt
// INFERENCE_HELPERS
class A : <!UNRESOLVED_REFERENCE!>Undefined<!>(<!CANNOT_INFER_PARAMETER_TYPE!>id<!>(<!CANNOT_INFER_PARAMETER_TYPE!>materialize<!>()))
